Minor information update.

--- a/index.html
+++ b/index.html
@@ -172,6 +172,7 @@ echo implode(", ", $exampleList->toArray());
 </li>
 </ul><h2>
 <a name="upcoming-development" class="anchor" href="#upcoming-development"><span class="octicon octicon-link"></span></a>Upcoming development</h2>
+          <p>Nothing currently upcoming.</p>
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/cmstead">cmstead</a></p>
