Updated Github page with upcoming development information.

--- a/index.html
+++ b/index.html
@@ -172,7 +172,24 @@ echo implode(", ", $exampleList->toArray());
 </li>
 </ul><h2>
 <a name="upcoming-development" class="anchor" href="#upcoming-development"><span class="octicon octicon-link"></span></a>Upcoming development</h2>
-          <p>Nothing currently upcoming.</p>
+<ul>
+  <li>foreach(callable $userFn)
+    <ul>
+      <li>Performs user defined function on each element</li>
+      <li>escapable loop by returning false</li>
+    </ul>
+  </li>
+  <li>identity()
+    <ul>
+      <li>returns identity collection</li>
+    </ul>
+  </li>
+  <li>partial(callable $userFn[, Mixed arguments])
+    <ul>
+      <li>Performs a right-partial application of passed values on provided function</li>
+    </ul>
+  </li>
+</ul>
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/cmstead">cmstead</a></p>
