--- a/index.html
+++ b/index.html
@@ -59,148 +59,159 @@ echo implode(", ", $exampleList->toArray());
 <h2>
 <a name="current-functionality" class="anchor" href="#current-functionality"><span class="octicon octicon-link"></span></a>Current functionality</h2>
 
-<p><strong>Collection Interface</strong></p>
+<h3>Collection Interface</h3>
 
 <ul>
-<li>Core functions defined here</li>
-<li>filter(callable $comparator)
+  <li>Core functions defined here</li>
+  
+  <li>filter(callable $comparator)
+    <ul>
+      <li>Returns collection of all elements in original collection which $locator returns true for</li>
+    </ul>
+  </li>
+  
+  <li>find(callable $locator)
+    <ul>
+      <li>Returns first element $locator returns true for</li>
+    </ul>
+  </li>
 
-<ul>
-<li>Returns collection of all elements in original collection which $locator returns true for</li>
-</ul>
-</li>
-<li>find(callable $locator)
-
-<ul>
-<li>Returns first element $locator returns true for</li>
-</ul>
-</li>
-<li>get(Mixed $index)
-
-<ul>
-<li>Returns collection value at the provided index</li>
-</ul>
-</li>
-<li>length()
-
-<ul>
-<li>Returns count of elements in collection</li>
-</ul>
-</li>
-<li>map(callable $modifier)
-
-<ul>
-<li>Returns new collection with $modifier function applied to all members of original collection</li>
-</ul>
-</li>
-<li>toArray()
-
-<ul>
-<li>Returns a standard PHP associative of collection key/value pairs</li>
-</ul>
-</li>
-</ul><p><strong>Tuples</strong></p>
-
-<ul>
-<li>first()
-
-<ul>
-<li>Returns first element in tuple</li>
-</ul>
-</li>
-<li>fold(callable $userFn)
-
-<ul>
-<li>Returns the result of $userFn being applied serially, left to right, to each element using the previous result (like adding across all elements)</li>
-</ul>
-</li>
-<li>last
-
-<ul>
-<li>Returns last element in the tuple</li>
-</ul>
-</li>
-<li>nth(int $index)
-
-<ul>
-<li>Returns nth element in the tuple</li>
-</ul>
-</li>
-<li>rest()
-
-<ul>
-<li>Returns new tuple containing all elements but the first of the original collection</li>
-</ul>
-</li>
-</ul><p><strong>Lists</strong></p>
-
-<ul>
-<li>Inherits from tuple</li>
-<li>pop()
-
-<ul>
-<li>Pops last element from list and returns it</li>
-</ul>
-</li>
-<li>push(Mixed $value)
-
-<ul>
-<li>Pushes new value on to the end of the list. Returns the updated list</li>
-</ul>
-</li>
-<li>slice(int $offset[, int $length])
-
-<ul>
-<li>Returns a list containing a subset of the elements of the original based on the offset and length passed</li>
-</ul>
-</li>
-<li>sort([callable $comparator])
-
-<ul>
-<li>Sorts list elements either in PHP sort standard order or using a comparator function</li>
-</ul>
-</li>
-</ul><p><strong>Maps</strong></p>
-
-<ul>
-<li>set(PhTuple $tuple)
-
-<ul>
-<li>Adds key/value pair to map</li>
-<li>Tuple must be an ordered pair representing a key and a value</li>
-</ul>
-</li>
-</ul><h2>
-<a name="upcoming-development" class="anchor" href="#upcoming-development"><span class="octicon octicon-link"></span></a>Upcoming development</h2>
-<ul>
   <li>foreach(callable $userFn)
     <ul>
       <li>Performs user defined function on each element</li>
       <li>escapable loop by returning false</li>
     </ul>
   </li>
+
+  <li>get(Mixed $index)
+    <ul>
+      <li>Returns collection value at the provided index</li>
+    </ul>
+  </li>
+  
   <li>identity()
     <ul>
       <li>returns identity collection</li>
     </ul>
   </li>
+
+  <li>length()
+    <ul>
+      <li>Returns count of elements in collection</li>
+    </ul>
+  </li>
+
+  <li>map(callable $modifier)
+    <ul>
+      <li>Returns new collection with $modifier function applied to all members of original collection</li>
+    </ul>
+  </li>
+  
+  <li>partial(callable $userFn[, Mixed arguments])
+    <ul>
+      <li>Performs a right-partial application of passed values on provided function</li>
+    </ul>
+  </li>
+
+  <li>toArray()
+    <ul>
+      <li>Returns a standard PHP associative of collection key/value pairs</li>
+    </ul>
+  </li>
+</ul>
+
+<h3>Tuples</h3>
+
+<ul>
+  <li>first()
+    <ul>
+      <li>Returns first element in tuple</li>
+    </ul>
+  </li>
+
+  <li>fold(callable $userFn)
+    <ul>
+      <li>Returns the result of $userFn being applied serially, left to right, to each element using the previous result (like adding across all elements)</li>
+    </ul>
+  </li>
+
+  <li>last
+    <ul>
+      <li>Returns last element in the tuple</li>
+    </ul>
+  </li>
+  
+  <li>nth(int $index)
+    <ul>
+      <li>Returns nth element in the tuple</li>
+    </ul>
+  </li>
+  
+  <li>rest()
+    <ul>
+      <li>Returns new tuple containing all elements but the first of the original collection</li>
+    </ul>
+  </li>
+</ul>
+
+<h3>Lists</h3>
+
+<ul>
+  <li>Inherits from tuple</li>
+  
   <li>intersect(array/collection $dataset [...])
     <ul>
       <li>Variable arity -- accepts 1+ arrays or collections to perform intersection with</li>
       <li>Returns original collection with intersection applied</li>
     </ul>
   </li>
-  <li>partial(callable $userFn[, Mixed arguments])
+
+  <li>pop()
     <ul>
-      <li>Performs a right-partial application of passed values on provided function</li>
+      <li>Pops last element from list and returns it</li>
     </ul>
   </li>
+  
+  <li>push(Mixed $value)
+    <ul>
+      <li>Pushes new value on to the end of the list. Returns the updated list</li>
+    </ul>
+  </li>
+  
+  <li>slice(int $offset[, int $length])
+    <ul>
+      <li>Returns a list containing a subset of the elements of the original based on the offset and length passed</li>
+    </ul>
+  </li>
+  
+  <li>sort([callable $comparator])
+    <ul>
+      <li>Sorts list elements either in PHP sort standard order or using a comparator function</li>
+    </ul>
+  </li>
+
   <li>union(array/collection $dataset [...])
     <ul>
       <li>Variable arity -- accepts 1+ arrays or collections to perform union with</li>
       <li>Returns original collection with union applied</li>
     </ul>
   </li>
+</ul>
+
+<h3>Maps</h3>
+
+<ul>
+  <li>set(PhTuple $tuple)
+    <ul>
+      <li>Adds key/value pair to map</li>
+      <li>Tuple must be an ordered pair representing a key and a value</li>
+    </ul>
+  </li>
+</ul>
+<h2><a name="upcoming-development" class="anchor" href="#upcoming-development"><span class="octicon octicon-link"></span></a>Upcoming development</h2>
+
+<ul>
+  <li>Nothing currently upcoming</li>
 </ul>
       </section>
       <footer>
