Updated page with latest release and notes.

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 
 
         <ul>
-          <li><a href="https://github.com/cmstead/phcollect/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/cmstead/phcollect/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/cmstead/phcollect/releases/download/v0.2/release.zip">Release <strong>v0.2</strong></a></li>
+          <li><a href="https://github.com/cmstead/phcollect/tarball/master">Source <strong>TAR Ball</strong></a></li>
           <li><a href="https://github.com/cmstead/phcollect">View On <strong>GitHub</strong></a></li>
         </ul>
       </header>
