--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 
         <ul>
-          <li><a href="https://github.com/cmstead/phcollect/releases/download/v0.3/release.zip">Release <strong>v0.3</strong></a></li>
+          <li><a href="https://github.com/cmstead/phcollect/releases/download/v0.4.0/release.zip">Release <strong>v0.4</strong></a></li>
           <li><a href="https://github.com/cmstead/phcollect/tarball/master">Source <strong>TAR Ball</strong></a></li>
           <li><a href="https://github.com/cmstead/phcollect">View On <strong>GitHub</strong></a></li>
         </ul>
@@ -59,222 +59,302 @@ echo implode(", ", $exampleList->toArray());
 <h2>
 <a name="current-functionality" class="anchor" href="#current-functionality"><span class="octicon octicon-link"></span></a>Current functionality</h2>
 
-<h3>Static Functions</h3>
+        <h3>Static/Core</h3>
 
-<ul>
-    <li>every(array, callable $userFn)
-        <ul>
-            <li>Performs user defined function on each element</li>
-            <li>escapable loop by returning false</li>
+        <ul class="task-list">
+            <li>every(array, callable $userFn)
+
+                <ul class="task-list">
+                    <li>O(n)</li>
+                    <li>Performs user defined function on each element</li>
+                    <li>escapable loop by returning false</li>
+                </ul>
+            </li>
+            <li>filter(array, callable $comparator)
+
+                <ul class="task-list">
+                    <li>O(n)</li>
+                    <li>Returns collection of all elements in original collection which $locator returns true for</li>
+                </ul>
+            </li>
+            <li>identity(varied $value)
+
+                <ul class="task-list">
+                    <li>O(1)</li>
+                    <li>returns identity collection</li>
+                </ul>
+            </li>
+            <li>intersect(mixed array[, array/collection, ...])
+
+                <ul class="task-list">
+                    <li>O(n log n) per array pair</li>
+                    <li>Variable arity -- accepts 1+ arrays or collections to perform intersection with</li>
+                    <li>Returns original collection with intersection applied</li>
+                </ul>
+            </li>
+            <li>map(mixed array, callable $modifier)
+
+                <ul class="task-list">
+                    <li>O(n)</li>
+                    <li>Returns new collection with $modifier function applied to all members of original collection</li>
+                </ul>
+            </li>
+            <li>partial(callable/array/string $userValue[, varied arguments])
+
+                <ul class="task-list">
+                    <li>O(1)</li>
+                    <li>Performs a right-partial application of passed values on provided function</li>
+                    <li>Accepts static functions as an array of names: array(class name, function name)</li>
+                    <li>Accepts internal static functions as a string: "function name"</li>
+                </ul>
+            </li>
+            <li>thread(collection/array, function[, function, ...])
+
+                <ul class="task-list">
+                    <li>O(n)</li>
+                    <li>Performs serial execution of passed functions using the output of the previous as the right-most argument of the next</li>
+                    <li>Static only (collections implicitly allow function chaining/threading)</li>
+                </ul>
+            </li>
+            <li>union(mixed array[, array/collection $dataset, ...])
+
+                <ul class="task-list">
+                    <li>O(n log n) per array pair</li>
+                    <li>Variable arity -- accepts 1+ arrays or collections to perform union with</li>
+                    <li>Returns original collection with union applied</li>
+                </ul>
+            </li>
         </ul>
-    </li>
 
-    <li>filter(array, callable $comparator)
-        <ul>
-            <li>Returns collection of all elements in original collection which $locator returns true for</li>
+        <h3>Collection Base</h3>
+
+        <ul class="task-list">
+            <li>Core functions defined here</li>
+            <li>every(callable $userFn)
+
+                <ul class="task-list">
+                    <li>O(n)</li>
+                    <li>Performs user defined function on each element</li>
+                    <li>escapable loop by returning false</li>
+                </ul>
+            </li>
+            <li>filter(callable $comparator)
+
+                <ul class="task-list">
+                    <li>O(n)</li>
+                    <li>Returns collection of all elements in original collection which $locator returns true for</li>
+                </ul>
+            </li>
+            <li>find(callable $locator)
+
+                <ul class="task-list">
+                    <li>O(n)</li>
+                    <li>Returns first element $locator returns true for</li>
+                </ul>
+            </li>
+            <li>identity()
+
+                <ul class="task-list">
+                    <li>O(1)</li>
+                    <li>returns identity collection</li>
+                </ul>
+            </li>
+            <li>get(varied $index)
+
+                <ul class="task-list">
+                    <li>O(1)</li>
+                    <li>Returns collection value at the provided index</li>
+                </ul>
+            </li>
+            <li>length()
+
+                <ul class="task-list">
+                    <li>O(1)</li>
+                    <li>Returns count of elements in collection</li>
+                </ul>
+            </li>
+            <li>map(callable $modifier)
+
+                <ul class="task-list">
+                    <li>O(n)</li>
+                    <li>Returns new collection with $modifier function applied to all members of original collection</li>
+                </ul>
+            </li>
+            <li>partial(callable/array/string $userValue[, varied arguments])
+
+                <ul class="task-list">
+                    <li>O(n)</li>
+                    <li>Performs a right-partial application of passed values on provided function</li>
+                    <li>Accepts static functions as an array of names: array(class name, function name)</li>
+                    <li>Accepts internal static functions as a string: "function name"</li>
+                </ul>
+            </li>
+            <li>thread(collection/array, function[, function, ...])
+
+                <ul class="task-list">
+                    <li>O(n)</li>
+                    <li>Performs serial execution of passed functions using the output of the previous as the right-most argument of the next</li>
+                    <li>Static only (collections implicitly allow function chaining/threading)</li>
+                </ul>
+            </li>
+            <li>toArray()
+                O(1)
+
+                <ul class="task-list">
+                    <li>Returns a standard PHP associative of collection key/value pairs</li>
+                </ul>
+            </li>
         </ul>
-    </li>
 
-    <li>identity($value)
-        <ul>
-            <li>returns identity collection</li>
+        <h3>Tuples</h3>
+
+        <ul class="task-list">
+            <li>first()
+
+                <ul class="task-list">
+                    <li>O(1)</li>
+                    <li>Returns first element in tuple</li>
+                </ul>
+            </li>
+            <li>fold(callable $userFn)
+
+                <ul class="task-list">
+                    <li>O(n)</li>
+                    <li>Returns the result of $userFn being applied serially, left to right, to each element using the previous result (like adding across all elements)</li>
+                </ul>
+            </li>
+            <li>last
+
+                <ul class="task-list">
+                    <li>O(1)</li>
+                    <li>Returns last element in the tuple</li>
+                </ul>
+            </li>
+            <li>modNth(int $index)
+
+                <ul class="task-list">
+                    <li>O(1)</li>
+                    <li>Returns nth element modded in tuple</li>
+                    <li>Resolves positive and negative integers</li>
+                </ul>
+            </li>
+            <li>nth(int $index)
+
+                <ul class="task-list">
+                    <li>O(1)</li>
+                    <li>Returns nth element in the tuple</li>
+                    <li>Negative indices return tuple-&gt;length() - $index value</li>
+                </ul>
+            </li>
+            <li>rest()
+
+                <ul class="task-list">
+                    <li>O(n)</li>
+                    <li>Returns new tuple containing all elements but the first of the original collection</li>
+                </ul>
+            </li>
         </ul>
-    </li>
 
-    <li>intersect(array[, array/collection, ...])
-        <ul>
-            <li>Variable arity -- accepts 1+ arrays or collections to perform intersection with</li>
-            <li>Returns original collection with intersection applied</li>
+        <h3>Lists</h3>
+
+        <ul class="task-list">
+            <li>Inherits from tuple</li>
+            <li>add(int $key, mixed $value)
+
+                <ul class="task-list">
+                    <li>O(n)</li>
+                    <li>Inserts a value into list at key location</li>
+                </ul>
+            </li>
+            <li>clear()
+
+                <ul class="task-list">
+                    <li>O(1)</li>
+                    <li>Clears all values out of list</li>
+                </ul>
+            </li>
+            <li>contains(varied $value)
+
+                <ul class="task-list">
+                    <li>O(n);</li>
+                    <li>Verifies value can be found in array</li>
+                    <li>Returns true upon finding a match, false otherwise</li>
+                </ul>
+            </li>
+            <li>delete(int $key)
+
+                <ul class="task-list">
+                    <li>O(n)</li>
+                    <li>Removes element at $key location</li>
+                    <li>Does not create sparse collection</li>
+                </ul>
+            </li>
+            <li>indexOf(varied $value)
+
+                <ul class="task-list">
+                    <li>O(n)</li>
+                    <li>Returns first index of matching value</li>
+                </ul>
+            </li>
+            <li>intersect(array/collection $dataset [...])
+
+                <ul class="task-list">
+                    <li>O(n log n) per array pair</li>
+                    <li>Variable arity -- accepts 1+ arrays or collections to perform intersection with</li>
+                    <li>Returns original collection with intersection applied</li>
+                </ul>
+            </li>
+            <li>pop()
+
+                <ul class="task-list">
+                    <li>O(1)</li>
+                    <li>Pops last element from list and returns it</li>
+                </ul>
+            </li>
+            <li>push(varied $value)
+
+                <ul class="task-list">
+                    <li>O(sum n)</li>
+                    <li>Pushes new value on to the end of the list. Returns the updated list</li>
+                </ul>
+            </li>
+            <li>slice(int $offset[, int $length])
+
+                <ul class="task-list">
+                    <li>O(n)</li>
+                    <li>Returns a list containing a subset of the elements of the original based on the offset and length passed</li>
+                </ul>
+            </li>
+            <li>sort([callable $comparator])
+
+                <ul class="task-list">
+                    <li>O(n log n)</li>
+                    <li>Sorts list elements either in PHP sort standard order or using a comparator function</li>
+                </ul>
+            </li>
+            <li>union(array/collection $dataset [...])
+
+                <ul class="task-list">
+                    <li>O(n log n)</li>
+                    <li>Variable arity -- accepts 1+ arrays or collections to perform union with</li>
+                    <li>Returns original collection with union applied</li>
+                </ul>
+            </li>
         </ul>
-    </li>
 
-    <li>map(array, callable $modifier)
-        <ul>
-            <li>Returns new collection with $modifier function applied to all members of original collection</li>
+        <h3>Maps</h3>
+
+        <ul class="task-list">
+            <li>set(PhTuple $tuple)
+
+                <ul class="task-list">
+                    <li>O(1)</li>
+                    <li>Adds key/value pair to map</li>
+                    <li>Tuple must be an ordered pair representing a key and a value</li>
+                </ul>
+            </li>
         </ul>
-    </li>
 
-    <li>partial(callable/array/string $userValue[, Mixed arguments])
-        <ul>
-            <li>Performs a right-partial application of passed values on provided function</li>
-            <li>Accepts static functions as an array of names: array(class name, function name)</li>
-            <li>Accepts internal static functions as a string: "function name"</li>
-        </ul>
-    </li>
-
-    <li>thread(collection/array, function[, function, ...])
-
-        <ul>
-            <li>Performs serial execution of passed functions using the output of the previous as the right-most argument of the next</li>
-        </ul>
-    </li>
-
-    <li>union(array[, array/collection $dataset, ...])
-        <ul>
-            <li>Variable arity -- accepts 1+ arrays or collections to perform union with</li>
-            <li>Returns original collection with union applied</li>
-        </ul>
-    </li>
-</ul>
-
-<h3>Collection Interface</h3>
-
-<ul>
-  <li>Core functions defined here</li>
-
-    <li>every(callable $userFn)
-        <ul>
-            <li>Performs user defined function on each element</li>
-            <li>escapable loop by returning false</li>
-        </ul>
-    </li>
-
-    <li>filter(callable $comparator)
-    <ul>
-      <li>Returns collection of all elements in original collection which $locator returns true for</li>
-    </ul>
-  </li>
-  
-  <li>find(callable $locator)
-    <ul>
-      <li>Returns first element $locator returns true for</li>
-    </ul>
-  </li>
-
-  <li>get(Mixed $index)
-    <ul>
-      <li>Returns collection value at the provided index</li>
-    </ul>
-  </li>
-  
-  <li>identity()
-    <ul>
-      <li>returns identity collection</li>
-    </ul>
-  </li>
-
-  <li>length()
-    <ul>
-      <li>Returns count of elements in collection</li>
-    </ul>
-  </li>
-
-  <li>map(callable $modifier)
-    <ul>
-      <li>Returns new collection with $modifier function applied to all members of original collection</li>
-    </ul>
-  </li>
-  
-  <li>partial(callable $userFn[, Mixed arguments])
-    <ul>
-      <li>Performs a right-partial application of passed values on provided function</li>
-      <li>Accepts static functions as an array of names: array(class name, function name)</li>
-      <li>Accepts internal static functions as a string: "function name"</li>
-    </ul>
-  </li>
-
-    <li>thread(function[, function, ...])
-
-        <ul>
-            <li>Performs serial execution of passed functions using the output of the previous as the right-most argument of the next</li>
-        </ul>
-    </li>
-
-  <li>toArray()
-    <ul>
-      <li>Returns a standard PHP associative of collection key/value pairs</li>
-    </ul>
-  </li>
-</ul>
-
-<h3>Tuples</h3>
-
-<ul>
-  <li>first()
-    <ul>
-      <li>Returns first element in tuple</li>
-    </ul>
-  </li>
-
-  <li>fold(callable $userFn)
-    <ul>
-      <li>Returns the result of $userFn being applied serially, left to right, to each element using the previous result (like adding across all elements)</li>
-    </ul>
-  </li>
-
-  <li>last
-    <ul>
-      <li>Returns last element in the tuple</li>
-    </ul>
-  </li>
-  
-  <li>nth(int $index)
-    <ul>
-      <li>Returns nth element in the tuple</li>
-    </ul>
-  </li>
-  
-  <li>rest()
-    <ul>
-      <li>Returns new tuple containing all elements but the first of the original collection</li>
-    </ul>
-  </li>
-</ul>
-
-<h3>Lists</h3>
-
-<ul>
-  <li>Inherits from tuple</li>
-  
-  <li>intersect(array/collection $dataset [...])
-    <ul>
-      <li>Variable arity -- accepts 1+ arrays or collections to perform intersection with</li>
-      <li>Returns original collection with intersection applied</li>
-    </ul>
-  </li>
-
-  <li>pop()
-    <ul>
-      <li>Pops last element from list and returns it</li>
-    </ul>
-  </li>
-  
-  <li>push(Mixed $value)
-    <ul>
-      <li>Pushes new value on to the end of the list. Returns the updated list</li>
-    </ul>
-  </li>
-  
-  <li>slice(int $offset[, int $length])
-    <ul>
-      <li>Returns a list containing a subset of the elements of the original based on the offset and length passed</li>
-    </ul>
-  </li>
-  
-  <li>sort([callable $comparator])
-    <ul>
-      <li>Sorts list elements either in PHP sort standard order or using a comparator function</li>
-    </ul>
-  </li>
-
-  <li>union(array/collection $dataset [...])
-    <ul>
-      <li>Variable arity -- accepts 1+ arrays or collections to perform union with</li>
-      <li>Returns original collection with union applied</li>
-    </ul>
-  </li>
-</ul>
-
-<h3>Maps</h3>
-
-<ul>
-  <li>set(PhTuple $tuple)
-    <ul>
-      <li>Adds key/value pair to map</li>
-      <li>Tuple must be an ordered pair representing a key and a value</li>
-    </ul>
-  </li>
-</ul>
 <h2><a name="upcoming-development" class="anchor" href="#upcoming-development"><span class="octicon octicon-link"></span></a>Upcoming development</h2>
 
 <ul>
